refactor object drag&drop to place the object in front of the camera, aligned to camera

--- a/views/layouts/editor.handlebars
+++ b/views/layouts/editor.handlebars
@@ -175,6 +175,8 @@
     <script type="text/javascript" src="/scripts/worldEditor/pointLightHelper.js"></script>
     <script type="text/javascript" src="/scripts/worldEditor/sceneLightingHelper.js"></script>
 
+    <script type="text/javascript" src="/scripts/worldEditor/objectPlacementHelper.js"></script>	
+
     <script type="text/javascript" src="/scripts/screenshot/ScreenshotRenderer.js"></script>
 
     <script type="text/javascript" src="/scripts/loaders/multiObjectLoader.js"></script>
